// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setDefaults fix derived field 1`] = `
Field {
  "_context": Immutable.Record {
    "model": null,
    "package": null,
    "entity": Entity {
      "_context": Immutable.Record {
        "model": null,
        "package": Package {
          "_context": Immutable.Record {
            "model": Model {
              "_defaultPackageName": "system",
              "store": Immutable.Record {
                "name": "TodoItems",
                "title": null,
                "description": null,
                "packages": Immutable.Map {
                  "system": [Circular],
                },
              },
            },
          },
          "store": Immutable.Record {
            "name": "system",
            "title": null,
            "description": null,
            "acl": 0,
            "abstract": null,
            "items": Immutable.Map {
              "cool entity": [Circular],
            },
          },
        },
      },
      "store": Immutable.Record {
        "name": "cool entity",
        "title": null,
        "description": null,
        "acl": null,
        "plural": null,
        "singular": null,
        "fields": Immutable.Map {
          "user": [Circular],
        },
        "storage": null,
        "indexed": null,
        "relations": null,
        "required": null,
      },
    },
  },
  "store": Immutable.Record {
    "name": "user",
    "title": null,
    "description": null,
    "acl": null,
    "args": null,
    "derived": true,
    "entity": null,
    "identity": null,
    "idKey": null,
    "indexed": null,
    "order": null,
    "persistent": null,
    "relation": null,
    "required": null,
    "type": null,
  },
}
`;

exports[`setDefaults fix derived field 2`] = `Array []`;

exports[`setDefaults fix derived field 3`] = `
Field {
  "_context": Immutable.Record {
    "model": null,
    "package": null,
    "entity": Entity {
      "_context": Immutable.Record {
        "model": null,
        "package": Package {
          "_context": Immutable.Record {
            "model": Model {
              "_defaultPackageName": "system",
              "store": Immutable.Record {
                "name": "TodoItems",
                "title": null,
                "description": null,
                "packages": Immutable.Map {
                  "system": [Circular],
                },
              },
            },
          },
          "store": Immutable.Record {
            "name": "system",
            "title": null,
            "description": null,
            "acl": 0,
            "abstract": null,
            "items": Immutable.Map {
              "cool entity": [Circular],
            },
          },
        },
      },
      "store": Immutable.Record {
        "name": "cool entity",
        "title": null,
        "description": null,
        "acl": null,
        "plural": null,
        "singular": null,
        "fields": Immutable.Map {
          "user": [Circular],
        },
        "storage": null,
        "indexed": null,
        "relations": null,
        "required": null,
      },
    },
  },
  "store": Immutable.Record {
    "name": "user",
    "title": null,
    "description": null,
    "acl": null,
    "args": null,
    "derived": true,
    "entity": null,
    "identity": null,
    "idKey": null,
    "indexed": false,
    "order": null,
    "persistent": false,
    "relation": null,
    "required": false,
    "type": null,
  },
}
`;

exports[`setDefaults fix identity field 1`] = `
Field {
  "_context": Immutable.Record {
    "model": null,
    "package": null,
    "entity": Entity {
      "_context": Immutable.Record {
        "model": null,
        "package": Package {
          "_context": Immutable.Record {
            "model": Model {
              "_defaultPackageName": "system",
              "store": Immutable.Record {
                "name": "TodoItems",
                "title": null,
                "description": null,
                "packages": Immutable.Map {
                  "system": [Circular],
                },
              },
            },
          },
          "store": Immutable.Record {
            "name": "system",
            "title": null,
            "description": null,
            "acl": 0,
            "abstract": null,
            "items": Immutable.Map {
              "cool entity": [Circular],
            },
          },
        },
      },
      "store": Immutable.Record {
        "name": "cool entity",
        "title": null,
        "description": null,
        "acl": null,
        "plural": null,
        "singular": null,
        "fields": Immutable.Map {
          "user": [Circular],
        },
        "storage": null,
        "indexed": null,
        "relations": null,
        "required": null,
      },
    },
  },
  "store": Immutable.Record {
    "name": "user",
    "title": null,
    "description": null,
    "acl": null,
    "args": null,
    "derived": null,
    "entity": null,
    "identity": true,
    "idKey": null,
    "indexed": null,
    "order": null,
    "persistent": null,
    "relation": null,
    "required": null,
    "type": null,
  },
}
`;

exports[`setDefaults fix identity field 2`] = `Array []`;

exports[`setDefaults fix identity field 3`] = `
Field {
  "_context": Immutable.Record {
    "model": null,
    "package": null,
    "entity": Entity {
      "_context": Immutable.Record {
        "model": null,
        "package": Package {
          "_context": Immutable.Record {
            "model": Model {
              "_defaultPackageName": "system",
              "store": Immutable.Record {
                "name": "TodoItems",
                "title": null,
                "description": null,
                "packages": Immutable.Map {
                  "system": [Circular],
                },
              },
            },
          },
          "store": Immutable.Record {
            "name": "system",
            "title": null,
            "description": null,
            "acl": 0,
            "abstract": null,
            "items": Immutable.Map {
              "cool entity": [Circular],
            },
          },
        },
      },
      "store": Immutable.Record {
        "name": "cool entity",
        "title": null,
        "description": null,
        "acl": null,
        "plural": null,
        "singular": null,
        "fields": Immutable.Map {
          "user": [Circular],
        },
        "storage": null,
        "indexed": null,
        "relations": null,
        "required": null,
      },
    },
  },
  "store": Immutable.Record {
    "name": "user",
    "title": null,
    "description": null,
    "acl": null,
    "args": null,
    "derived": false,
    "entity": null,
    "identity": true,
    "idKey": EntityRef {
      "store": Immutable.Record {
        "backField": "",
        "entity": "cool entity",
        "field": "user",
      },
    },
    "indexed": true,
    "order": null,
    "persistent": true,
    "relation": null,
    "required": true,
    "type": null,
  },
}
`;

exports[`setDefaults fix indexed field 1`] = `
Field {
  "_context": Immutable.Record {
    "model": null,
    "package": null,
    "entity": Entity {
      "_context": Immutable.Record {
        "model": null,
        "package": Package {
          "_context": Immutable.Record {
            "model": Model {
              "_defaultPackageName": "system",
              "store": Immutable.Record {
                "name": "TodoItems",
                "title": null,
                "description": null,
                "packages": Immutable.Map {
                  "system": [Circular],
                },
              },
            },
          },
          "store": Immutable.Record {
            "name": "system",
            "title": null,
            "description": null,
            "acl": 0,
            "abstract": null,
            "items": Immutable.Map {
              "cool entity": [Circular],
            },
          },
        },
      },
      "store": Immutable.Record {
        "name": "cool entity",
        "title": null,
        "description": null,
        "acl": null,
        "plural": null,
        "singular": null,
        "fields": Immutable.Map {
          "user": [Circular],
        },
        "storage": null,
        "indexed": null,
        "relations": null,
        "required": null,
      },
    },
  },
  "store": Immutable.Record {
    "name": "user",
    "title": null,
    "description": null,
    "acl": null,
    "args": null,
    "derived": null,
    "entity": null,
    "identity": null,
    "idKey": null,
    "indexed": true,
    "order": null,
    "persistent": null,
    "relation": null,
    "required": null,
    "type": null,
  },
}
`;

exports[`setDefaults fix indexed field 2`] = `Array []`;

exports[`setDefaults fix indexed field 3`] = `
Field {
  "_context": Immutable.Record {
    "model": null,
    "package": null,
    "entity": Entity {
      "_context": Immutable.Record {
        "model": null,
        "package": Package {
          "_context": Immutable.Record {
            "model": Model {
              "_defaultPackageName": "system",
              "store": Immutable.Record {
                "name": "TodoItems",
                "title": null,
                "description": null,
                "packages": Immutable.Map {
                  "system": [Circular],
                },
              },
            },
          },
          "store": Immutable.Record {
            "name": "system",
            "title": null,
            "description": null,
            "acl": 0,
            "abstract": null,
            "items": Immutable.Map {
              "cool entity": [Circular],
            },
          },
        },
      },
      "store": Immutable.Record {
        "name": "cool entity",
        "title": null,
        "description": null,
        "acl": null,
        "plural": null,
        "singular": null,
        "fields": Immutable.Map {
          "user": [Circular],
        },
        "storage": null,
        "indexed": null,
        "relations": null,
        "required": null,
      },
    },
  },
  "store": Immutable.Record {
    "name": "user",
    "title": null,
    "description": null,
    "acl": null,
    "args": null,
    "derived": false,
    "entity": null,
    "identity": null,
    "idKey": null,
    "indexed": true,
    "order": null,
    "persistent": true,
    "relation": null,
    "required": false,
    "type": null,
  },
}
`;

exports[`setDefaults fix persistend-derived field 1`] = `
Field {
  "_context": Immutable.Record {
    "model": null,
    "package": null,
    "entity": Entity {
      "_context": Immutable.Record {
        "model": null,
        "package": Package {
          "_context": Immutable.Record {
            "model": Model {
              "_defaultPackageName": "system",
              "store": Immutable.Record {
                "name": "TodoItems",
                "title": null,
                "description": null,
                "packages": Immutable.Map {
                  "system": [Circular],
                },
              },
            },
          },
          "store": Immutable.Record {
            "name": "system",
            "title": null,
            "description": null,
            "acl": 0,
            "abstract": null,
            "items": Immutable.Map {
              "cool entity": [Circular],
            },
          },
        },
      },
      "store": Immutable.Record {
        "name": "cool entity",
        "title": null,
        "description": null,
        "acl": null,
        "plural": null,
        "singular": null,
        "fields": Immutable.Map {
          "user": [Circular],
        },
        "storage": null,
        "indexed": null,
        "relations": null,
        "required": null,
      },
    },
  },
  "store": Immutable.Record {
    "name": "user",
    "title": null,
    "description": null,
    "acl": null,
    "args": null,
    "derived": true,
    "entity": null,
    "identity": null,
    "idKey": null,
    "indexed": null,
    "order": null,
    "persistent": true,
    "relation": null,
    "required": null,
    "type": null,
  },
}
`;

exports[`setDefaults fix persistend-derived field 2`] = `Array []`;

exports[`setDefaults fix persistend-derived field 3`] = `
Field {
  "_context": Immutable.Record {
    "model": null,
    "package": null,
    "entity": Entity {
      "_context": Immutable.Record {
        "model": null,
        "package": Package {
          "_context": Immutable.Record {
            "model": Model {
              "_defaultPackageName": "system",
              "store": Immutable.Record {
                "name": "TodoItems",
                "title": null,
                "description": null,
                "packages": Immutable.Map {
                  "system": [Circular],
                },
              },
            },
          },
          "store": Immutable.Record {
            "name": "system",
            "title": null,
            "description": null,
            "acl": 0,
            "abstract": null,
            "items": Immutable.Map {
              "cool entity": [Circular],
            },
          },
        },
      },
      "store": Immutable.Record {
        "name": "cool entity",
        "title": null,
        "description": null,
        "acl": null,
        "plural": null,
        "singular": null,
        "fields": Immutable.Map {
          "user": [Circular],
        },
        "storage": null,
        "indexed": null,
        "relations": null,
        "required": null,
      },
    },
  },
  "store": Immutable.Record {
    "name": "user",
    "title": null,
    "description": null,
    "acl": null,
    "args": null,
    "derived": true,
    "entity": null,
    "identity": null,
    "idKey": null,
    "indexed": false,
    "order": null,
    "persistent": true,
    "relation": null,
    "required": false,
    "type": null,
  },
}
`;

exports[`setDefaults fix simple field 1`] = `
Field {
  "_context": Immutable.Record {
    "model": null,
    "package": null,
    "entity": Entity {
      "_context": Immutable.Record {
        "model": null,
        "package": Package {
          "_context": Immutable.Record {
            "model": Model {
              "_defaultPackageName": "system",
              "store": Immutable.Record {
                "name": "TodoItems",
                "title": null,
                "description": null,
                "packages": Immutable.Map {
                  "system": [Circular],
                },
              },
            },
          },
          "store": Immutable.Record {
            "name": "system",
            "title": null,
            "description": null,
            "acl": 0,
            "abstract": null,
            "items": Immutable.Map {
              "cool entity": [Circular],
            },
          },
        },
      },
      "store": Immutable.Record {
        "name": "cool entity",
        "title": null,
        "description": null,
        "acl": null,
        "plural": null,
        "singular": null,
        "fields": Immutable.Map {
          "user": [Circular],
        },
        "storage": null,
        "indexed": null,
        "relations": null,
        "required": null,
      },
    },
  },
  "store": Immutable.Record {
    "name": "user",
    "title": null,
    "description": null,
    "acl": null,
    "args": null,
    "derived": null,
    "entity": null,
    "identity": null,
    "idKey": null,
    "indexed": null,
    "order": null,
    "persistent": null,
    "relation": null,
    "required": null,
    "type": null,
  },
}
`;

exports[`setDefaults fix simple field 2`] = `Array []`;

exports[`setDefaults fix simple field 3`] = `
Field {
  "_context": Immutable.Record {
    "model": null,
    "package": null,
    "entity": Entity {
      "_context": Immutable.Record {
        "model": null,
        "package": Package {
          "_context": Immutable.Record {
            "model": Model {
              "_defaultPackageName": "system",
              "store": Immutable.Record {
                "name": "TodoItems",
                "title": null,
                "description": null,
                "packages": Immutable.Map {
                  "system": [Circular],
                },
              },
            },
          },
          "store": Immutable.Record {
            "name": "system",
            "title": null,
            "description": null,
            "acl": 0,
            "abstract": null,
            "items": Immutable.Map {
              "cool entity": [Circular],
            },
          },
        },
      },
      "store": Immutable.Record {
        "name": "cool entity",
        "title": null,
        "description": null,
        "acl": null,
        "plural": null,
        "singular": null,
        "fields": Immutable.Map {
          "user": [Circular],
        },
        "storage": null,
        "indexed": null,
        "relations": null,
        "required": null,
      },
    },
  },
  "store": Immutable.Record {
    "name": "user",
    "title": null,
    "description": null,
    "acl": null,
    "args": null,
    "derived": false,
    "entity": null,
    "identity": null,
    "idKey": null,
    "indexed": false,
    "order": null,
    "persistent": true,
    "relation": null,
    "required": false,
    "type": null,
  },
}
`;
